--- a/Index1.html
+++ b/Index1.html
@@ -145,10 +145,10 @@
         <!-- Profile Description -->
         <div id="profile_desc">
             <p>
-            	Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam ac risus nibh. Donec adipiscing luctus tur
+            	ENGLISH FOR ALL COMPETITIVE EXAMINATIONS OBJECTIVE & DESCRIPTIVE
             </p>
             <p>
-            	Lorem ipsum dolor sit amet, consectetur adipiscing eli
+            	For Staff Selection, Bank & W.B.C.S.(Prelims and Mains)
             </p>
         </div>
         <!-- End Profile Description -->  
@@ -253,7 +253,7 @@
             <li>
                 <i class="glyphicon glyphicon-envelope"></i>
                 <label>Email</label>
-                <span class="value">rb.bhunia@gmail.com</span>
+                <span class="value">arb.bhunia@gmail.com</span>
                 <div class="clear"></div>
             </li>
 
@@ -276,13 +276,12 @@
 
         <p style="margin-bottom:20px">
             <i class="fa fa-quote-left"></i>       
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam nec nulla sagittis, scelerisque mi vitae, congue turpis. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam nec nulla sagittis, scelerisque mi vitae, congue turpis.
+            ENGLISH FOR ALL COMPETITIVE EXAMINATIONS OBJECTIVE & DESCRIPTIVE
         </p>
         
          <p style="margin-bottom:20px">
             <i class="fa fa-quote-left"></i>       
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam nec nulla sagittis, scelerisque mi vitae, congue turpis. 
-
+          For Staff Selection, Bank & W.B.C.S.(Prelims and Mains) 100 Practice Sets of Each Examination 
         </p>
 
     </div>
@@ -785,10 +784,10 @@
   <!-- #filters -->
   <ul id="filters" class="clearfix">
         <li><span class="filter active" data-filter="catWeb catGraphic catMotion logo">All</span></li>
-        <li><span class="filter" data-filter="catWeb">Web Design</span></li>
-        <li><span class="filter" data-filter="catGraphic">Graphic Design</span></li>
-        <li><span class="filter" data-filter="catMotion">Motion Graphic</span></li>
-        <li><span class="filter" data-filter="logo">Logo</span></li>
+        <li><span class="filter" data-filter="catWeb">SSC</span></li>
+        <li><span class="filter" data-filter="catGraphic">BANK</span></li>
+        <li><span class="filter" data-filter="catMotion">RAIL</span></li>
+        <li><span class="filter" data-filter="logo">WBCS</span></li>
     </ul>
     <!-- /#filters -->
 
